--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-next": "13.4.7",
     "framer": "^2.3.0",
     "framer-motion": "^10.12.18",
+    "hey-listen": "^1.0.8",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
     "popmotion": "^11.0.5",
@@ -60,6 +61,7 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
+    "style-value-types": "^5.1.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
